# kustomize.bzl

./: .bazelrc  .gitattributes  BUILD  MODULE.bazel  README.md  defs.bzl  extensions.bzl  go.mod  kustomize.bzl  versions.bzl
bazel/: BUILD
examples/compiled/: BUILD  MODULE.bazel  README.md  go.mod
examples/compiled/overlays/prod/: patch.yaml
examples/images/: .bazelrc  BUILD  MODULE.bazel  README.md
examples/images/k8s/: deployment.yaml  redis.yaml  service.yaml
examples/oci_images/: .bazelrc  BUILD  MODULE.bazel  README.md
examples/oci_images/k8s/: kustomization.yaml
examples/simple/: BUILD  MODULE.bazel  README.md  tools.lock.json
examples/simple/.aspect/: deploy.axl
examples/simple/base/: deployment.yaml  service.yaml
examples/simple/overlays/prod/: kustomization.yaml
toolchain/: toolchain.bzl
